# website-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/skills/new-lambda/: SKILL.md
.github/workflows/: bootstrap.yml  ci.yml  deploy.yml
docker/website_health_check/: Dockerfile
docs/: notifications.md
docs/lambdas/: website_health_check.md
src/: health_check.py  website_health_check.py
src/common/: __init__.py  errors.py  http.py  logging_config.py  notify.py
terraform/: backend.tf  lambdas.tf  outputs.tf  providers.tf  sns.tf  variables.tf
terraform/bootstrap/: README.md  main.tf
terraform/iam/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: test_health_check.py  test_http.py  test_notify.py  test_website_health_check.py
