[project]
name = "website-utils"
version = "0.1.0"
description = "AWS Lambda maintenance jobs for the 18for0 website"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
